adds basic implemeneation of different map views
